Updated main html page
Changed file name, and updated initial project text in the head of the
html file.

--- a/SSB_tax.html
+++ b/SSB_tax.html
@@ -3,13 +3,13 @@
 
 	<head>
 		<meta charset="utf-8">
-			<!-------------------------------------------------------------------------->			<!--     PREDICT 490 - The Show                                           -->
-			<!--     Food Team Members:                                               -->
-			<!--          Melissa Bull,                                               -->
-			<!--          Loretta Davidson,                                           -->
-			<!--    	  Kathryn Daugherty,                                          -->
-			<!--          Timothy Johnson,                                            -->
-			<!--          Neil Marshall                                               -->
+			<!-------------------------------------------------------------------------->			
+			<!--     PREDICT 455 - The Show                                           -->
+			<!--     Health and Fitness Team Members:                                 -->
+			<!--          Natalia Galvez,                                             -->
+			<!--          John Giumarra,                                              -->
+			<!--          Dion Grieger,                                               -->
+			<!--          Phil Salm                                                   -->
 			<!--                                                                      -->
 			<!--      This web show was developed utilizing the reveal.js framework   -->
 			<!--      developed by Hakim El Hattab.                                   -->
