--- a/SSB_tax.html
+++ b/SSB_tax.html
@@ -16,7 +16,7 @@
 			<!--      ref:  http://lab.hakim.se/reveal-js/).                          -->
 			<!-------------------------------------------------------------------------->
 
-		<title>Predict 490 - The Show</title>
+		<title>Predict 455 - The Show</title>
 
 		<meta name="description" content="Water">
 		<meta name="author" content="Green Team">
@@ -58,7 +58,7 @@
 				<section id="title" >
 					<section id="title_first" data-autoslide="0">
 						
-						<h2> PREDICT 490 - Food Team</h2>
+						<h2> PREDICT 455 - Health and Fitness Team</h2>
 						<h3>The Show</h3>
 						<h6>this is a blank line for formatting the web page</h6>
 						<h6>blank line</h6>
