--- a/SSB_tax.html
+++ b/SSB_tax.html
@@ -76,14 +76,15 @@
 					</section>
 				<!-- Nested List of Sources enabled by embedding another section within a slide. -->
 					<section>
-							<h2>Sources</h2>
+							<h2>Data Sources</h2>
 								<p>Press down or up to navigate.</p>
 								<ol>
 									<li> <a onclick="window.open('http:iaspub.epa.gov/apex/waters/f?p=131:7:0::NO::', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
 										303(d) Listed Waters</a> 
 									</li> 
-									<li> <a onclick="window.open('http://ga.water.usgs.gov/edu/earthhowmuch.html', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
-										Amount of Water on Earth</a> 
+									<li> <a onclick="window.open('https://escholarship.org/uc/item/1fj3h5cj', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
+										Babey, Susan H.; Jones, Malia; Yu, Hongjian; Goldstein, Harold. (2009). Bubbling Over: Soda Consumption and Its Link to Obesity in California. UCLA Center for Health Policy Research. 
+										UCLA: UCLA Center for Health Policy Research. Retrieved from: https://escholarship.org/uc/item/1fj3h5cj</a> 
 									</li> 					
 									<li> <a onclick="window.open('http://www.jawon.com/reng/res/body-composition.html', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
 										Body Composition and Water</a> 
@@ -159,8 +160,8 @@
 							</section>
 						<section>
 
-							<h2>Food Team Authors:</h2>
-							<p>Melissa Bull, Loretta Davidson, Kathryn Daugherty, Timothy Johnson & Neil Marshall</p>
+							<h2>Health and Fitness Team Authors:</h2>
+							<p>Natalia Galvez, John Giumarra, Dion Grieger, and Phil Salm,  </p>
 							<h2>_</h2>
 							<p>End of Sources</p>
 							<p>Press the <a href="#" class="navigate-up">up arrow </a> to go back up.</p>
