--- a/SSB_tax.html
+++ b/SSB_tax.html
@@ -94,8 +94,9 @@
 										Must A, Spadano J, Coakley EH, Field AE, Colditz G, Dietz WH. The Disease Burden Associated With Overweight and Obesity. 
 										JAMA. 1999;282(16):1523-1529. doi:10.1001/jama.282.16.1523</a> 
 									</li> 									
-									<li> <a onclick="window.open('http://www.earth-policy.org/data_center/C24', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
-										Bottled Water Consumption</a> 
+									<li> <a onclick="window.open('http://journals.plos.org/plosmedicine/article?id=10.1371/journal.pmed.1002283', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
+										Silver, Lynn D., Ng, Shu Wen, Ryan-Ibarra, Suzanne, Smith Taillie, Lindsey, Induni, Marta, Mile, Donna R., Poti, Jennifer M. and Popkin, Barry M. 2017. “Changes in prices, sales, consumer spending, and beverage consumption one year after a tax on sugar-sweetened 
+										beverages in Berkeley, California, US: A before-and-after study.” PLoS Med. 14(4): e1002283. doi: 10.1371/journal.pmed.1002283. </a> 
 									</li> 											   
 									<li> <a onclick="window.open('http://www.mayoclinic.org/healthy-living/nutrition-and-healthy-eating/in-depth/water/art-20044256', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
 										Daily Consumption Recommendation</a> 
