Added additional references.

--- a/SSB_tax.html
+++ b/SSB_tax.html
@@ -94,15 +94,16 @@
 										Must A, Spadano J, Coakley EH, Field AE, Colditz G, Dietz WH. The Disease Burden Associated With Overweight and Obesity. 
 										JAMA. 1999;282(16):1523-1529. doi:10.1001/jama.282.16.1523</a> 
 									</li> 									
-									<li> <a onclick="window.open('http://journals.plos.org/plosmedicine/article?id=10.1371/journal.pmed.1002283', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
+									<li> <a onclick="window.open('http://www.cpc.unc.edu/projects/nutrans/publications/Mex%20SSBtax%20yr%201plus%20suppBMJ2016.pdf/view', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
 										Silver, Lynn D., Ng, Shu Wen, Ryan-Ibarra, Suzanne, Smith Taillie, Lindsey, Induni, Marta, Mile, Donna R., Poti, Jennifer M. and Popkin, Barry M. 2017. “Changes in prices, sales, consumer spending, and beverage consumption one year after a tax on sugar-sweetened 
 										beverages in Berkeley, California, US: A before-and-after study.” PLoS Med. 14(4): e1002283. doi: 10.1371/journal.pmed.1002283. </a> 
 									</li> 											   
 									<li> <a onclick="window.open('http://www.mayoclinic.org/healthy-living/nutrition-and-healthy-eating/in-depth/water/art-20044256', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
-										Daily Consumption Recommendation</a> 
+										DColchero, M. Arantxa, Popkin, Barry M., Rivera,  Juan A., and Ng, Shu Wen. (2015).  
+										Beverage purchases from stores in Mexico under the excise tax on sugar sweetened beverages: observational study.</a> 
 									</li>								
-									<li> <a onclick="window.open('http://www.scientificamerican.com/article/strange-but-true-drinking-too-much-water-can-kill/', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
-										Drinking Too Much Water Can Kill</a> 
+									<li> <a onclick="window.open('http://www.euro.who.int/__data/assets/pdf_file/0008/332882/assessment-impact-PH-tax-report.pdf?ua=1', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
+										DBakacs, M. and Martos, E. (2015). Assessment of the Impact of a Public Health Product Tax. World Health Organisation Report.</a> 
 									</li>
 									<li> <a onclick="window.open('http://www.nesc.wvu.edu/ndwc/articles/ot/2p01/history_distribution.html', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
 										History of Drinking Water</a> 
