added aha resource for daily sugar limit

--- a/SSB_tax.html
+++ b/SSB_tax.html
@@ -105,6 +105,9 @@
 									<li> <a onclick="window.open('http://www.euro.who.int/__data/assets/pdf_file/0008/332882/assessment-impact-PH-tax-report.pdf?ua=1', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
 										DBakacs, M. and Martos, E. (2015). Assessment of the Impact of a Public Health Product Tax. World Health Organisation Report.</a> 
 									</li>
+									<li> <a onclick="window.open('http://www.heart.org/HEARTORG/HealthyLiving/HealthyEating/Nutrition/Added-Sugars_UCM_305858_Article.jsp#.WTLX5hMrJE4', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
+										American Heart Association Recommended Daily Sugar Limit.</a> 
+									</li>
 																	
 								</ol>
 							</section>
