--- a/SSB_tax.html
+++ b/SSB_tax.html
@@ -128,6 +128,27 @@
 									</li>  									
 									<li> <a onclick="window.open('www.flaticon.com', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
 										Soda bottle icon made by http://www.freepik.com</a> 
+									</li>									
+									<li> <a onclick="window.open('https://pixabay.com/en/diabetes-insulin-syringe-insulin-2129005/', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
+										Sugar and syringe image</a>
+									</li>  									
+									<li> <a onclick="window.open('https://pixabay.com/en/international-world-flags-countries-1751293/', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
+										World flags image</a> 
+									</li>									
+									<li> <a onclick="window.open('https://upload.wikimedia.org/wikipedia/commons/0/00/Flag_of_Hungary.png', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
+										Hungary flag image</a> 
+									</li>									
+									<li> <a onclick="window.open('http://flaglane.com/download/french-flag/french-flag-large.png', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
+										France flag image</a> 
+									</li>									
+									<li> <a onclick="window.open('http://flaglane.com/download/dane-flag/dane-flag-graphic.png', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
+										Denmark flag image</a> 
+									</li>									
+									<li> <a onclick="window.open('http://flaglane.com/download/finnish-flag/finnish-flag-graphic.png', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
+										Finland flag image</a> 
+									</li>									
+									<li> <a onclick="window.open('https://upload.wikimedia.org/wikipedia/commons/1/17/Flag_of_Mexico.png', '_blank', 'location=yes,height=600,width=600,scrollbars=yes,status=yes');">
+										Mexico flag image</a> 
 									</li>
 
 									  						
